--- a/test1.ipynb
+++ b/test1.ipynb
@@ -2,6 +2,21 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Only run this in colab\n",
+    "from google.colab import drive\n",
+    "drive.mount('/content/drive')\n",
+    "%cd /content/drive/MyDrive/Github/Dimension\n",
+    "import tensorflow as tf\n",
+    "print(tf.__version__)\n",
+    "print(tf.config.list_physical_devices('GPU'))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
    "outputs": [
