--- a/test1.ipynb
+++ b/test1.ipynb
@@ -1,15 +1,13 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
     "#Only run this in colab\n",
     "from google.colab import drive\n",
     "drive.mount('/content/drive')\n",
-    "%cd /content/drive/MyDrive/Github/Dimension\n",
+    "%cd /content/drive/MyDrive/Github/Taskmaster\n",
     "import tensorflow as tf\n",
     "print(tf.__version__)\n",
     "print(tf.config.list_physical_devices('GPU'))"
@@ -24,32 +22,21 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Finished step 0, 48 out of 50 remain open.\n",
-      "Finished step 1, 43 out of 50 remain open.\n",
-      "Finished step 2, 43 out of 50 remain open.\n",
-      "Finished step 3, 43 out of 50 remain open.\n",
-      "Finished step 4, 43 out of 50 remain open.\n",
-      "Finished step 5, 43 out of 50 remain open.\n",
-      "Finished step 6, 43 out of 50 remain open.\n",
-      "Finished step 7, 43 out of 50 remain open.\n",
-      "Finished step 8, 43 out of 50 remain open.\n",
-      "Finished step 9, 43 out of 50 remain open.\n",
-      "Epoch 1/3\n",
-      "14/14 [==============================] - 2s 6ms/step - loss: 108.1565 - eval_output_loss: 6.7721e-04 - policy_output_loss: 2.2841\n",
-      "Epoch 2/3\n",
-      "14/14 [==============================] - 0s 7ms/step - loss: 81.9383 - eval_output_loss: 3.2554e-05 - policy_output_loss: 0.8273\n",
-      "Epoch 3/3\n",
-      "14/14 [==============================] - 0s 6ms/step - loss: 47.9552 - eval_output_loss: 1.4527e-05 - policy_output_loss: 0.4377\n"
+      "Finished step 0, 1 out of 1 remain open.\n",
+      "Finished step 1, 1 out of 1 remain open.\n",
+      "Finished step 2, 1 out of 1 remain open.\n",
+      "Finished step 3, 1 out of 1 remain open.\n",
+      "1/1 [==============================] - 1s 600ms/step - loss: 0.9421 - eval_output_loss: 0.2823 - policy_output_loss: 0.0810\n"
      ]
     }
    ],
    "source": [
-    "import rubics\n",
+    "import small_rubics as rubics\n",
     "import numpy as np\n",
     "from student import student\n",
     "from classroom import classroom\n",
     "from teacher import teacher\n",
-    "from rubics_neural_networks import student_network\n",
+    "from small_rubics_neural_networks import student_network\n",
     "\n",
     "task = rubics.rubics_task\n",
     "setup = rubics.rubics_setup\n",
@@ -57,91 +44,132 @@
     "student_network = student_network()\n",
     "student_template = student(task, 40,student_network)\n",
     "t = teacher(setup)\n",
-    "c = classroom(task, setup, t, student_template, n_students=1, max_steps=10)\n",
-    "c.run_training_batch(100)\n"
+    "c = classroom(task, setup, t, student_template, n_students=1, max_steps=4)\n",
+    "c.run_training_batch(1)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Finished step 0, 47 out of 50 remain open.\n",
-      "Finished step 1, 36 out of 50 remain open.\n",
-      "Finished step 2, 34 out of 50 remain open.\n",
-      "Finished step 3, 33 out of 50 remain open.\n",
-      "Finished step 4, 33 out of 50 remain open.\n",
-      "Finished step 5, 33 out of 50 remain open.\n",
-      "Finished step 6, 33 out of 50 remain open.\n",
-      "Finished step 7, 33 out of 50 remain open.\n",
-      "WARNING:tensorflow:Tensor._shape is private, use Tensor.shape instead. Tensor._shape will eventually be removed.\n",
-      "WARNING:tensorflow:Tensor._shape is private, use Tensor.shape instead. Tensor._shape will eventually be removed.\n",
-      "WARNING:tensorflow:Tensor._shape is private, use Tensor.shape instead. Tensor._shape will eventually be removed.\n",
-      "Finished step 8, 33 out of 50 remain open.\n",
-      "Finished step 9, 33 out of 50 remain open.\n",
-      "Finished step 10, 33 out of 50 remain open.\n",
-      "Finished step 11, 33 out of 50 remain open.\n",
-      "Finished step 12, 33 out of 50 remain open.\n",
-      "Finished step 13, 33 out of 50 remain open.\n",
-      "Finished step 14, 33 out of 50 remain open.\n",
-      "Epoch 1/3\n",
-      "17/17 [==============================] - 0s 7ms/step - loss: 5.0745 - eval_output_loss: 0.0017 - policy_output_loss: 0.1920\n",
-      "Epoch 2/3\n",
-      "17/17 [==============================] - 0s 7ms/step - loss: 4.4937 - eval_output_loss: 1.8616e-04 - policy_output_loss: 0.1612\n",
-      "Epoch 3/3\n",
-      "17/17 [==============================] - 0s 7ms/step - loss: 4.3541 - eval_output_loss: 2.0482e-04 - policy_output_loss: 0.1530\n",
-      "Finished step 0, 43 out of 50 remain open.\n",
-      "Finished step 1, 36 out of 50 remain open.\n",
-      "Finished step 2, 34 out of 50 remain open.\n",
-      "Finished step 3, 34 out of 50 remain open.\n",
-      "Finished step 4, 34 out of 50 remain open.\n",
-      "Finished step 5, 33 out of 50 remain open.\n",
-      "Finished step 6, 33 out of 50 remain open.\n",
-      "Finished step 7, 33 out of 50 remain open.\n",
-      "Finished step 8, 33 out of 50 remain open.\n",
-      "Finished step 9, 33 out of 50 remain open.\n",
-      "Finished step 10, 33 out of 50 remain open.\n",
-      "Finished step 11, 33 out of 50 remain open.\n",
-      "Finished step 12, 33 out of 50 remain open.\n",
-      "Finished step 13, 33 out of 50 remain open.\n",
-      "Finished step 14, 33 out of 50 remain open.\n",
-      "Epoch 1/3\n",
-      "16/16 [==============================] - 0s 7ms/step - loss: 3.8089 - eval_output_loss: 1.1600e-04 - policy_output_loss: 0.1674\n",
-      "Epoch 2/3\n",
-      "16/16 [==============================] - 0s 7ms/step - loss: 3.1419 - eval_output_loss: 1.2300e-04 - policy_output_loss: 0.1364\n",
-      "Epoch 3/3\n",
-      "16/16 [==============================] - 0s 7ms/step - loss: 2.8146 - eval_output_loss: 1.1231e-04 - policy_output_loss: 0.1279\n",
-      "Finished step 0, 47 out of 50 remain open.\n",
-      "Finished step 1, 44 out of 50 remain open.\n",
-      "Finished step 2, 42 out of 50 remain open.\n",
-      "Finished step 3, 41 out of 50 remain open.\n",
-      "Finished step 4, 41 out of 50 remain open.\n",
-      "Finished step 5, 41 out of 50 remain open.\n",
-      "Finished step 6, 41 out of 50 remain open.\n",
-      "Finished step 7, 41 out of 50 remain open.\n",
-      "Finished step 8, 41 out of 50 remain open.\n",
-      "Finished step 9, 41 out of 50 remain open.\n",
-      "Finished step 10, 41 out of 50 remain open.\n",
-      "Finished step 11, 41 out of 50 remain open.\n",
-      "Finished step 12, 41 out of 50 remain open.\n",
-      "Finished step 13, 41 out of 50 remain open.\n",
-      "Finished step 14, 41 out of 50 remain open.\n",
-      "Epoch 1/3\n",
-      "20/20 [==============================] - 0s 7ms/step - loss: 2.8791 - eval_output_loss: 1.6636e-05 - policy_output_loss: 0.1866\n",
-      "Epoch 2/3\n",
-      "20/20 [==============================] - 0s 7ms/step - loss: 2.5611 - eval_output_loss: 5.2548e-05 - policy_output_loss: 0.1731\n",
-      "Epoch 3/3\n",
-      "20/20 [==============================] - 0s 7ms/step - loss: 2.2014 - eval_output_loss: 4.4394e-05 - policy_output_loss: 0.1616\n"
+      "  BB    \n",
+      "  OO    \n",
+      "RBWWGOYY\n",
+      "RBWWGOYY\n",
+      "  RR    \n",
+      "  GG    \n",
+      "\n",
+      "Finished step 0, 1 out of 1 remain open.\n",
+      "Finished step 1, 0 out of 1 remain open.\n",
+      "Finished step 2, 0 out of 1 remain open.\n",
+      "Finished step 3, 0 out of 1 remain open.\n",
+      "1/1 [==============================] - 0s 7ms/step - loss: 0.1690 - eval_output_loss: 1.6078e-04 - policy_output_loss: 0.1270\n",
+      "Finished step 0, 1 out of 1 remain open.\n",
+      "Finished step 1, 0 out of 1 remain open.\n",
+      "Finished step 2, 0 out of 1 remain open.\n",
+      "Finished step 3, 0 out of 1 remain open.\n",
+      "1/1 [==============================] - 0s 5ms/step - loss: 0.1658 - eval_output_loss: 1.5557e-04 - policy_output_loss: 0.1239\n",
+      "Finished step 0, 1 out of 1 remain open.\n",
+      "Finished step 1, 0 out of 1 remain open.\n",
+      "Finished step 2, 0 out of 1 remain open.\n",
+      "Finished step 3, 0 out of 1 remain open.\n",
+      "1/1 [==============================] - 0s 5ms/step - loss: 0.1616 - eval_output_loss: 1.5106e-04 - policy_output_loss: 0.1199\n",
+      "Finished step 0, 1 out of 1 remain open.\n",
+      "Finished step 1, 0 out of 1 remain open.\n",
+      "Finished step 2, 0 out of 1 remain open.\n",
+      "Finished step 3, 0 out of 1 remain open.\n",
+      "1/1 [==============================] - 0s 5ms/step - loss: 0.2081 - eval_output_loss: 1.4701e-04 - policy_output_loss: 0.1664\n",
+      "Finished step 0, 1 out of 1 remain open.\n",
+      "Finished step 1, 0 out of 1 remain open.\n",
+      "Finished step 2, 0 out of 1 remain open.\n",
+      "Finished step 3, 0 out of 1 remain open.\n",
+      "1/1 [==============================] - 0s 6ms/step - loss: 0.1504 - eval_output_loss: 1.4378e-04 - policy_output_loss: 0.1088\n",
+      "Finished step 0, 1 out of 1 remain open.\n",
+      "Finished step 1, 0 out of 1 remain open.\n",
+      "Finished step 2, 0 out of 1 remain open.\n",
+      "Finished step 3, 0 out of 1 remain open.\n",
+      "1/1 [==============================] - 0s 6ms/step - loss: 0.1704 - eval_output_loss: 1.4107e-04 - policy_output_loss: 0.1290\n",
+      "Finished step 0, 1 out of 1 remain open.\n",
+      "Finished step 1, 0 out of 1 remain open.\n",
+      "Finished step 2, 0 out of 1 remain open.\n",
+      "Finished step 3, 0 out of 1 remain open.\n",
+      "1/1 [==============================] - 0s 7ms/step - loss: 0.2252 - eval_output_loss: 1.3860e-04 - policy_output_loss: 0.1838\n",
+      "Finished step 0, 1 out of 1 remain open.\n",
+      "Finished step 1, 0 out of 1 remain open.\n",
+      "Finished step 2, 0 out of 1 remain open.\n",
+      "Finished step 3, 0 out of 1 remain open.\n",
+      "1/1 [==============================] - 0s 5ms/step - loss: 0.1696 - eval_output_loss: 1.3652e-04 - policy_output_loss: 0.1283\n",
+      "Finished step 0, 1 out of 1 remain open.\n",
+      "Finished step 1, 0 out of 1 remain open.\n",
+      "Finished step 2, 0 out of 1 remain open.\n",
+      "Finished step 3, 0 out of 1 remain open.\n",
+      "1/1 [==============================] - 0s 6ms/step - loss: 0.1968 - eval_output_loss: 1.3460e-04 - policy_output_loss: 0.1556\n",
+      "Finished step 0, 1 out of 1 remain open.\n",
+      "Finished step 1, 0 out of 1 remain open.\n",
+      "Finished step 2, 0 out of 1 remain open.\n",
+      "Finished step 3, 0 out of 1 remain open.\n",
+      "1/1 [==============================] - 0s 6ms/step - loss: 0.1591 - eval_output_loss: 1.3299e-04 - policy_output_loss: 0.1180\n",
+      "Finished step 0, 1 out of 1 remain open.\n",
+      "Finished step 1, 0 out of 1 remain open.\n",
+      "Finished step 2, 0 out of 1 remain open.\n",
+      "Finished step 3, 0 out of 1 remain open.\n",
+      "1/1 [==============================] - 0s 7ms/step - loss: 0.1512 - eval_output_loss: 1.3175e-04 - policy_output_loss: 0.1102\n",
+      "Finished step 0, 1 out of 1 remain open.\n",
+      "Finished step 1, 0 out of 1 remain open.\n",
+      "Finished step 2, 0 out of 1 remain open.\n",
+      "Finished step 3, 0 out of 1 remain open.\n",
+      "1/1 [==============================] - 0s 7ms/step - loss: 0.1871 - eval_output_loss: 1.3055e-04 - policy_output_loss: 0.1463\n",
+      "Finished step 0, 1 out of 1 remain open.\n",
+      "Finished step 1, 0 out of 1 remain open.\n",
+      "Finished step 2, 0 out of 1 remain open.\n",
+      "Finished step 3, 0 out of 1 remain open.\n",
+      "1/1 [==============================] - 0s 5ms/step - loss: 0.1363 - eval_output_loss: 1.2978e-04 - policy_output_loss: 0.0955\n",
+      "Finished step 0, 1 out of 1 remain open.\n",
+      "Finished step 1, 0 out of 1 remain open.\n",
+      "Finished step 2, 0 out of 1 remain open.\n",
+      "Finished step 3, 0 out of 1 remain open.\n",
+      "1/1 [==============================] - 0s 5ms/step - loss: 0.1610 - eval_output_loss: 1.2890e-04 - policy_output_loss: 0.1204\n",
+      "Finished step 0, 1 out of 1 remain open.\n",
+      "Finished step 1, 0 out of 1 remain open.\n",
+      "Finished step 2, 0 out of 1 remain open.\n",
+      "Finished step 3, 0 out of 1 remain open.\n",
+      "1/1 [==============================] - 0s 6ms/step - loss: 0.1752 - eval_output_loss: 1.2837e-04 - policy_output_loss: 0.1347\n",
+      "Finished step 0, 1 out of 1 remain open.\n",
+      "Finished step 1, 0 out of 1 remain open.\n",
+      "Finished step 2, 0 out of 1 remain open.\n",
+      "Finished step 3, 0 out of 1 remain open.\n",
+      "1/1 [==============================] - 0s 6ms/step - loss: 0.1730 - eval_output_loss: 1.2798e-04 - policy_output_loss: 0.1326\n",
+      "Finished step 0, 1 out of 1 remain open.\n",
+      "Finished step 1, 0 out of 1 remain open.\n",
+      "Finished step 2, 0 out of 1 remain open.\n",
+      "Finished step 3, 0 out of 1 remain open.\n",
+      "1/1 [==============================] - 0s 5ms/step - loss: 0.1349 - eval_output_loss: 1.2791e-04 - policy_output_loss: 0.0946\n",
+      "Finished step 0, 1 out of 1 remain open.\n",
+      "Finished step 1, 0 out of 1 remain open.\n",
+      "Finished step 2, 0 out of 1 remain open.\n",
+      "Finished step 3, 0 out of 1 remain open.\n",
+      "1/1 [==============================] - 0s 6ms/step - loss: 0.1322 - eval_output_loss: 1.2759e-04 - policy_output_loss: 0.0919\n",
+      "Finished step 0, 1 out of 1 remain open.\n",
+      "Finished step 1, 0 out of 1 remain open.\n",
+      "Finished step 2, 0 out of 1 remain open.\n",
+      "Finished step 3, 0 out of 1 remain open.\n",
+      "1/1 [==============================] - 0s 5ms/step - loss: 0.1371 - eval_output_loss: 1.2744e-04 - policy_output_loss: 0.0970\n",
+      "Finished step 0, 1 out of 1 remain open.\n",
+      "Finished step 1, 0 out of 1 remain open.\n",
+      "Finished step 2, 0 out of 1 remain open.\n",
+      "Finished step 3, 0 out of 1 remain open.\n",
+      "1/1 [==============================] - 0s 6ms/step - loss: 0.2027 - eval_output_loss: 1.2703e-04 - policy_output_loss: 0.1626\n"
      ]
     }
    ],
    "source": [
-    "for i in range(3):\n",
-    "    c.run_training_batch(50)"
+    "for i in range(20):\n",
+    "    c.run_training_batch(1)"
    ]
   }
  ],
