--- a/test1.ipynb
+++ b/test1.ipynb
@@ -19,14 +19,19 @@
    "metadata": {},
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "student_network.__init__() got an unexpected keyword argument 'residual_layers'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn [1], line 11\u001b[0m\n\u001b[0;32m      8\u001b[0m task \u001b[38;5;241m=\u001b[39m rubics\u001b[38;5;241m.\u001b[39mrubics_task\n\u001b[0;32m      9\u001b[0m setup \u001b[38;5;241m=\u001b[39m rubics\u001b[38;5;241m.\u001b[39mrubics_setup\n\u001b[1;32m---> 11\u001b[0m my_student_network \u001b[38;5;241m=\u001b[39m \u001b[43mstudent_network\u001b[49m\u001b[43m(\u001b[49m\u001b[43mresidual_layers\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43m \u001b[49m\u001b[38;5;241;43m2\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[0;32m     12\u001b[0m student_template \u001b[38;5;241m=\u001b[39m student(task, \u001b[38;5;241m50\u001b[39m,my_student_network)\n\u001b[0;32m     13\u001b[0m t \u001b[38;5;241m=\u001b[39m teacher(setup, \u001b[38;5;241m0\u001b[39m)\n",
-      "\u001b[1;31mTypeError\u001b[0m: student_network.__init__() got an unexpected keyword argument 'residual_layers'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Finished step 0, 1 out of 1 remain open.\n",
+      "Finished step 1, 0 out of 1 remain open.\n",
+      "Finished step 2, 0 out of 1 remain open.\n",
+      "Finished step 3, 0 out of 1 remain open.\n",
+      "Epoch 1/3\n",
+      "1/1 [==============================] - 1s 1s/step - loss: 0.8305 - eval_output_loss: 0.2500 - policy_output_loss: 0.0264\n",
+      "Epoch 2/3\n",
+      "1/1 [==============================] - 0s 3ms/step - loss: 0.7163 - eval_output_loss: 0.2148 - policy_output_loss: 0.0255\n",
+      "Epoch 3/3\n",
+      "1/1 [==============================] - 0s 5ms/step - loss: 0.6183 - eval_output_loss: 0.1850 - policy_output_loss: 0.0240\n"
      ]
     }
    ],
@@ -41,75 +46,77 @@
     "task = rubics.rubics_task\n",
     "setup = rubics.rubics_setup\n",
     "\n",
-    "my_student_network = student_network(residual_layers = 2)\n",
+    "my_student_network = student_network.create(residual_layers = 2)\n",
     "student_template = student(task, 50,my_student_network)\n",
     "t = teacher(setup, 0)\n",
     "c = classroom(task, setup, t, student_template, n_students=1, max_steps=4)\n",
-    "c.run_training_batch(1)\n"
+    "c.run_training_batch(n_problems=1,epochs_per_episode=3)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "  WB    \n",
-      "  WB    \n",
-      "RRGWOOYB\n",
-      "RRGWOOYB\n",
-      "  YG    \n",
-      "  YG    \n",
-      "\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Traceback (most recent call last):\n",
-      "  File \"_pydevd_bundle/pydevd_cython.pyx\", line 1134, in _pydevd_bundle.pydevd_cython.PyDBFrame.trace_dispatch\n",
-      "  File \"_pydevd_bundle/pydevd_cython.pyx\", line 311, in _pydevd_bundle.pydevd_cython.PyDBFrame.do_wait_suspend\n",
-      "  File \"c:\\Users\\leove\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\debugpy\\_vendored\\pydevd\\pydevd.py\", line 2062, in do_wait_suspend\n",
-      "    keep_suspended = self._do_wait_suspend(thread, frame, event, arg, suspend_type, from_this_thread, frames_tracker)\n",
-      "  File \"c:\\Users\\leove\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\debugpy\\_vendored\\pydevd\\pydevd.py\", line 2098, in _do_wait_suspend\n",
-      "    time.sleep(0.01)\n",
-      "KeyboardInterrupt\n"
-     ]
-    },
-    {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn [3], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m i \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(\u001b[38;5;241m20\u001b[39m):\n\u001b[1;32m----> 2\u001b[0m     \u001b[43mc\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mrun_training_batch\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m1\u001b[39;49m\u001b[43m)\u001b[49m\n",
-      "File \u001b[1;32mc:\\Users\\leove\\OneDrive\\Documents\\Selberprogrammiertes\\Taskmaster\\classroom.py:37\u001b[0m, in \u001b[0;36mclassroom.run_training_batch\u001b[1;34m(self, n_problems)\u001b[0m\n\u001b[0;32m     34\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mrun_training_batch\u001b[39m(\u001b[39mself\u001b[39m, n_problems):\n\u001b[0;32m     36\u001b[0m     problems \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mteacher\u001b[39m.\u001b[39mgenerate_problems(n_problems)\n\u001b[1;32m---> 37\u001b[0m     replay_record, proof_nodes \u001b[39m=\u001b[39m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mtest_students(problems)\n\u001b[0;32m     39\u001b[0m     inputs \u001b[39m=\u001b[39m []\n\u001b[0;32m     40\u001b[0m     policies \u001b[39m=\u001b[39m []\n",
-      "File \u001b[1;32mc:\\Users\\leove\\OneDrive\\Documents\\Selberprogrammiertes\\Taskmaster\\classroom.py:74\u001b[0m, in \u001b[0;36mclassroom.test_students\u001b[1;34m(self, start_states)\u001b[0m\n\u001b[0;32m     71\u001b[0m \u001b[39mfor\u001b[39;00m _ \u001b[39min\u001b[39;00m \u001b[39mrange\u001b[39m(\u001b[39mself\u001b[39m\u001b[39m.\u001b[39mmax_steps):\n\u001b[0;32m     73\u001b[0m     unfinished_task_indices \u001b[39m=\u001b[39m [i \u001b[39mfor\u001b[39;00m i,p \u001b[39min\u001b[39;00m \u001b[39menumerate\u001b[39m(proof_nodes) \u001b[39mif\u001b[39;00m \u001b[39mnot\u001b[39;00m p\u001b[39m.\u001b[39mcompleted]\n\u001b[1;32m---> 74\u001b[0m     result \u001b[39m=\u001b[39m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mstudent\u001b[39m.\u001b[39;49mrun_action_step([proof_nodes[i] \u001b[39mfor\u001b[39;49;00m i \u001b[39min\u001b[39;49;00m unfinished_task_indices])\n\u001b[0;32m     76\u001b[0m     \u001b[39mfor\u001b[39;00m j, (action, pi, eval_root) \u001b[39min\u001b[39;00m \u001b[39menumerate\u001b[39m(result):\n\u001b[0;32m     78\u001b[0m         k \u001b[39m=\u001b[39m unfinished_task_indices[j]\n",
-      "File \u001b[1;32mc:\\Users\\leove\\OneDrive\\Documents\\Selberprogrammiertes\\Taskmaster\\student.py:61\u001b[0m, in \u001b[0;36mstudent.run_action_step\u001b[1;34m(self, task_nodes)\u001b[0m\n\u001b[0;32m     57\u001b[0m eval_trees \u001b[39m=\u001b[39m \u001b[39mset\u001b[39m(initial_eval_trees)\n\u001b[0;32m     59\u001b[0m \u001b[39mfor\u001b[39;00m i \u001b[39min\u001b[39;00m \u001b[39mrange\u001b[39m(\u001b[39mself\u001b[39m\u001b[39m.\u001b[39mn_sim):\n\u001b[1;32m---> 61\u001b[0m     \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mrun_simulation_step(eval_trees)\n\u001b[0;32m     62\u001b[0m     eval_trees\u001b[39m.\u001b[39mdifference_update([e \u001b[39mfor\u001b[39;00m e \u001b[39min\u001b[39;00m eval_trees \u001b[39mif\u001b[39;00m e\u001b[39m.\u001b[39mcompleted])\n\u001b[0;32m     64\u001b[0m result_list \u001b[39m=\u001b[39m []\n",
-      "File \u001b[1;32mc:\\Users\\leove\\OneDrive\\Documents\\Selberprogrammiertes\\Taskmaster\\student.py:42\u001b[0m, in \u001b[0;36mstudent.run_simulation_step\u001b[1;34m(self, eval_trees)\u001b[0m\n\u001b[0;32m     39\u001b[0m \u001b[39mfor\u001b[39;00m i, t \u001b[39min\u001b[39;00m \u001b[39menumerate\u001b[39m(eval_trees):\n\u001b[0;32m     41\u001b[0m     \u001b[39mif\u001b[39;00m \u001b[39mnot\u001b[39;00m t\u001b[39m.\u001b[39mcompleted:\n\u001b[1;32m---> 42\u001b[0m         t\u001b[39m.\u001b[39;49mupdate(eval_leaves[i])\n",
-      "File \u001b[1;32mc:\\Users\\leove\\OneDrive\\Documents\\Selberprogrammiertes\\Taskmaster\\evaluation_tree.py:121\u001b[0m, in \u001b[0;36mevaluation_tree_node.update\u001b[1;34m(self, task_node)\u001b[0m\n\u001b[0;32m    119\u001b[0m     \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mchildren[\u001b[39mself\u001b[39m\u001b[39m.\u001b[39mdirect_to] \u001b[39m=\u001b[39m evaluation_tree_node(task_node)\n\u001b[0;32m    120\u001b[0m \u001b[39melse\u001b[39;00m:\n\u001b[1;32m--> 121\u001b[0m     \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mchildren[\u001b[39mself\u001b[39m\u001b[39m.\u001b[39mdirect_to]\u001b[39m.\u001b[39mupdate(task_node)\n\u001b[0;32m    123\u001b[0m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mq[\u001b[39mself\u001b[39m\u001b[39m.\u001b[39mdirect_to] \u001b[39m=\u001b[39m (\u001b[39mself\u001b[39m\u001b[39m.\u001b[39mq[\u001b[39mself\u001b[39m\u001b[39m.\u001b[39mdirect_to] \u001b[39m*\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mn[\u001b[39mself\u001b[39m\u001b[39m.\u001b[39mdirect_to] \u001b[39m+\u001b[39m v)\u001b[39m/\u001b[39m(\u001b[39mself\u001b[39m\u001b[39m.\u001b[39mn[\u001b[39mself\u001b[39m\u001b[39m.\u001b[39mdirect_to]\u001b[39m+\u001b[39m\u001b[39m1\u001b[39m)\n\u001b[0;32m    124\u001b[0m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mn[\u001b[39mself\u001b[39m\u001b[39m.\u001b[39mdirect_to] \u001b[39m+\u001b[39m\u001b[39m=\u001b[39m \u001b[39m1\u001b[39m\n",
-      "File \u001b[1;32mc:\\Users\\leove\\OneDrive\\Documents\\Selberprogrammiertes\\Taskmaster\\evaluation_tree.py:121\u001b[0m, in \u001b[0;36mevaluation_tree_node.update\u001b[1;34m(self, task_node)\u001b[0m\n\u001b[0;32m    119\u001b[0m     \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mchildren[\u001b[39mself\u001b[39m\u001b[39m.\u001b[39mdirect_to] \u001b[39m=\u001b[39m evaluation_tree_node(task_node)\n\u001b[0;32m    120\u001b[0m \u001b[39melse\u001b[39;00m:\n\u001b[1;32m--> 121\u001b[0m     \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mchildren[\u001b[39mself\u001b[39m\u001b[39m.\u001b[39mdirect_to]\u001b[39m.\u001b[39mupdate(task_node)\n\u001b[0;32m    123\u001b[0m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mq[\u001b[39mself\u001b[39m\u001b[39m.\u001b[39mdirect_to] \u001b[39m=\u001b[39m (\u001b[39mself\u001b[39m\u001b[39m.\u001b[39mq[\u001b[39mself\u001b[39m\u001b[39m.\u001b[39mdirect_to] \u001b[39m*\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mn[\u001b[39mself\u001b[39m\u001b[39m.\u001b[39mdirect_to] \u001b[39m+\u001b[39m v)\u001b[39m/\u001b[39m(\u001b[39mself\u001b[39m\u001b[39m.\u001b[39mn[\u001b[39mself\u001b[39m\u001b[39m.\u001b[39mdirect_to]\u001b[39m+\u001b[39m\u001b[39m1\u001b[39m)\n\u001b[0;32m    124\u001b[0m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mn[\u001b[39mself\u001b[39m\u001b[39m.\u001b[39mdirect_to] \u001b[39m+\u001b[39m\u001b[39m=\u001b[39m \u001b[39m1\u001b[39m\n",
-      "File \u001b[1;32mc:\\Users\\leove\\OneDrive\\Documents\\Selberprogrammiertes\\Taskmaster\\evaluation_tree.py:114\u001b[0m, in \u001b[0;36mevaluation_tree_node.update\u001b[1;34m(self, task_node)\u001b[0m\n\u001b[0;32m    111\u001b[0m         \u001b[39mreturn\u001b[39;00m\n\u001b[0;32m    113\u001b[0m \u001b[39mif\u001b[39;00m task_node\u001b[39m.\u001b[39mcompleted:\n\u001b[1;32m--> 114\u001b[0m     v \u001b[39m=\u001b[39m task_node\u001b[39m.\u001b[39mtask\u001b[39m.\u001b[39mreward_function(task_node\u001b[39m.\u001b[39mstate,task_node\u001b[39m.\u001b[39mdepth)\n\u001b[0;32m    115\u001b[0m \u001b[39melse\u001b[39;00m:\n\u001b[0;32m    116\u001b[0m     v \u001b[39m=\u001b[39m task_node\u001b[39m.\u001b[39minitial_evaluation\n",
-      "File \u001b[1;32mc:\\Users\\leove\\OneDrive\\Documents\\Selberprogrammiertes\\Taskmaster\\evaluation_tree.py:114\u001b[0m, in \u001b[0;36mevaluation_tree_node.update\u001b[1;34m(self, task_node)\u001b[0m\n\u001b[0;32m    111\u001b[0m         \u001b[39mreturn\u001b[39;00m\n\u001b[0;32m    113\u001b[0m \u001b[39mif\u001b[39;00m task_node\u001b[39m.\u001b[39mcompleted:\n\u001b[1;32m--> 114\u001b[0m     v \u001b[39m=\u001b[39m task_node\u001b[39m.\u001b[39mtask\u001b[39m.\u001b[39mreward_function(task_node\u001b[39m.\u001b[39mstate,task_node\u001b[39m.\u001b[39mdepth)\n\u001b[0;32m    115\u001b[0m \u001b[39melse\u001b[39;00m:\n\u001b[0;32m    116\u001b[0m     v \u001b[39m=\u001b[39m task_node\u001b[39m.\u001b[39minitial_evaluation\n",
-      "File \u001b[1;32m_pydevd_bundle/pydevd_cython.pyx:1443\u001b[0m, in \u001b[0;36m_pydevd_bundle.pydevd_cython.SafeCallWrapper.__call__\u001b[1;34m()\u001b[0m\n",
-      "File \u001b[1;32m_pydevd_bundle/pydevd_cython.pyx:1820\u001b[0m, in \u001b[0;36m_pydevd_bundle.pydevd_cython.ThreadTracer.__call__\u001b[1;34m()\u001b[0m\n",
-      "File \u001b[1;32m_pydevd_bundle/pydevd_cython.pyx:1143\u001b[0m, in \u001b[0;36m_pydevd_bundle.pydevd_cython.PyDBFrame.trace_dispatch\u001b[1;34m()\u001b[0m\n",
-      "File \u001b[1;32m_pydevd_bundle/pydevd_cython.pyx:1134\u001b[0m, in \u001b[0;36m_pydevd_bundle.pydevd_cython.PyDBFrame.trace_dispatch\u001b[1;34m()\u001b[0m\n",
-      "File \u001b[1;32m_pydevd_bundle/pydevd_cython.pyx:311\u001b[0m, in \u001b[0;36m_pydevd_bundle.pydevd_cython.PyDBFrame.do_wait_suspend\u001b[1;34m()\u001b[0m\n",
-      "File \u001b[1;32mc:\\Users\\leove\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\debugpy\\_vendored\\pydevd\\pydevd.py:2062\u001b[0m, in \u001b[0;36mPyDB.do_wait_suspend\u001b[1;34m(self, thread, frame, event, arg, exception_type)\u001b[0m\n\u001b[0;32m   2059\u001b[0m             from_this_thread\u001b[39m.\u001b[39mappend(frame_custom_thread_id)\n\u001b[0;32m   2061\u001b[0m     \u001b[39mwith\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_threads_suspended_single_notification\u001b[39m.\u001b[39mnotify_thread_suspended(thread_id, stop_reason):\n\u001b[1;32m-> 2062\u001b[0m         keep_suspended \u001b[39m=\u001b[39m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m_do_wait_suspend(thread, frame, event, arg, suspend_type, from_this_thread, frames_tracker)\n\u001b[0;32m   2064\u001b[0m frames_list \u001b[39m=\u001b[39m \u001b[39mNone\u001b[39;00m\n\u001b[0;32m   2066\u001b[0m \u001b[39mif\u001b[39;00m keep_suspended:\n\u001b[0;32m   2067\u001b[0m     \u001b[39m# This means that we should pause again after a set next statement.\u001b[39;00m\n",
-      "File \u001b[1;32mc:\\Users\\leove\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\debugpy\\_vendored\\pydevd\\pydevd.py:2098\u001b[0m, in \u001b[0;36mPyDB._do_wait_suspend\u001b[1;34m(self, thread, frame, event, arg, suspend_type, from_this_thread, frames_tracker)\u001b[0m\n\u001b[0;32m   2095\u001b[0m         \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_call_input_hook()\n\u001b[0;32m   2097\u001b[0m     \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mprocess_internal_commands()\n\u001b[1;32m-> 2098\u001b[0m     time\u001b[39m.\u001b[39;49msleep(\u001b[39m0.01\u001b[39;49m)\n\u001b[0;32m   2100\u001b[0m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mcancel_async_evaluation(get_current_thread_id(thread), \u001b[39mstr\u001b[39m(\u001b[39mid\u001b[39m(frame)))\n\u001b[0;32m   2102\u001b[0m \u001b[39m# process any stepping instructions\u001b[39;00m\n",
-      "\u001b[1;31mKeyboardInterrupt\u001b[0m: "
+      "Network saved under models/model.keras.\n"
      ]
     }
    ],
    "source": [
-    "for i in range(20):\n",
-    "    c.run_training_batch(1)"
+    "my_student_network.save(\"models/model.keras\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Finished step 0, 100 out of 100 remain open.\n",
+      "Finished step 1, 50 out of 100 remain open.\n",
+      "Finished step 2, 50 out of 100 remain open.\n",
+      "Finished step 3, 28 out of 100 remain open.\n",
+      "15/15 [==============================] - 1s 3ms/step - loss: 0.5031 - eval_output_loss: 0.1271 - policy_output_loss: 0.0634\n",
+      "Finished step 0, 100 out of 100 remain open.\n",
+      "Finished step 1, 55 out of 100 remain open.\n",
+      "Finished step 2, 55 out of 100 remain open.\n",
+      "Finished step 3, 43 out of 100 remain open.\n",
+      "16/16 [==============================] - 0s 3ms/step - loss: 0.5316 - eval_output_loss: 0.1373 - policy_output_loss: 0.0513\n",
+      "Finished step 0, 100 out of 100 remain open.\n",
+      "Finished step 1, 19 out of 100 remain open.\n",
+      "Finished step 2, 19 out of 100 remain open.\n",
+      "Finished step 3, 9 out of 100 remain open.\n",
+      "10/10 [==============================] - 0s 3ms/step - loss: 1.3862 - eval_output_loss: 0.4239 - policy_output_loss: 0.0414\n",
+      "Finished step 0, 100 out of 100 remain open.\n",
+      "Finished step 1, 31 out of 100 remain open.\n",
+      "Finished step 2, 31 out of 100 remain open.\n",
+      "Finished step 3, 22 out of 100 remain open.\n",
+      "12/12 [==============================] - 0s 3ms/step - loss: 0.9017 - eval_output_loss: 0.2642 - policy_output_loss: 0.0337\n",
+      "Finished step 0, 100 out of 100 remain open.\n",
+      "Finished step 1, 9 out of 100 remain open.\n",
+      "Finished step 2, 9 out of 100 remain open.\n",
+      "Finished step 3, 0 out of 100 remain open.\n",
+      "8/8 [==============================] - 0s 3ms/step - loss: 1.9138 - eval_output_loss: 0.6034 - policy_output_loss: 0.0270\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(5):\n",
+    "    c.run_training_batch(n_problems=100,epochs_per_episode=3)"
    ]
   }
  ],
