Fixed error with winning states

--- a/test1.ipynb
+++ b/test1.ipynb
@@ -1,10 +1,12 @@
 {
  "cells": [
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
-    "#Only run this in colab\n",
+    "#Only run in colab\n",
     "from google.colab import drive\n",
     "drive.mount('/content/drive')\n",
     "%cd /content/drive/MyDrive/Github/Taskmaster\n",
@@ -22,66 +24,35 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Finished step 0, 1 out of 1 remain open.\n",
-      "Finished step 1, 1 out of 1 remain open.\n",
-      "Finished step 2, 1 out of 1 remain open.\n",
-      "Finished step 3, 1 out of 1 remain open.\n",
-      "Epoch 1/3\n",
-      "1/1 [==============================] - 1s 1s/step - loss: 0.8539 - eval_output_loss: 0.2342 - policy_output_loss: 0.0975\n",
-      "Epoch 2/3\n",
-      "1/1 [==============================] - 0s 5ms/step - loss: 0.5444 - eval_output_loss: 0.1437 - policy_output_loss: 0.0602\n",
-      "Epoch 3/3\n",
-      "1/1 [==============================] - 0s 5ms/step - loss: 0.1229 - eval_output_loss: 0.0100 - policy_output_loss: 0.0399\n"
+      "WARNING:tensorflow:From C:\\Users\\leove\\AppData\\Roaming\\Python\\Python310\\site-packages\\keras\\src\\losses.py:2976: The name tf.losses.sparse_softmax_cross_entropy is deprecated. Please use tf.compat.v1.losses.sparse_softmax_cross_entropy instead.\n",
+      "\n",
+      "WARNING:tensorflow:From C:\\Users\\leove\\AppData\\Roaming\\Python\\Python310\\site-packages\\keras\\src\\backend.py:1398: The name tf.executing_eagerly_outside_functions is deprecated. Please use tf.compat.v1.executing_eagerly_outside_functions instead.\n",
+      "\n"
      ]
     }
    ],
    "source": [
-    "import small_rubics as rubics\n",
+    "import small_rubiks as rubiks\n",
     "import numpy as np\n",
     "from student import student\n",
     "from classroom import classroom\n",
     "from teacher import teacher\n",
-    "from small_rubics_neural_networks import student_network\n",
+    "from small_rubiks_neural_networks import student_network\n",
     "\n",
-    "task = rubics.rubics_task\n",
-    "setup = rubics.rubics_setup\n",
+    "task = rubiks.rubiks_task\n",
+    "setup = rubiks.rubiks_setup\n",
     "\n",
-    "my_student_network = student_network.create(residual_layers = 2)\n",
+    "#my_student_network = student_network.load(\"models/trained_model.h5\")\n",
+    "my_student_network = student_network.create(residual_layers = 4)\n",
     "student_template = student(task, 50,my_student_network)\n",
-    "t = teacher(setup, 0)\n",
-    "c = classroom(task, setup, t, student_template, n_students=1, max_steps=4)\n",
-    "c.run_training_batch(n_problems=1,epochs_per_episode=3)\n"
+    "t = teacher(setup, 3)\n",
+    "c = classroom(task, setup, t, student_template, n_students=1, max_steps=10)\n",
+    "#c.run_training_batch(n_problems=1,epochs_per_episode=3)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Network saved under models/model.keras.\n"
-     ]
-    }
-   ],
-   "source": [
-    "my_student_network.save(\"models/model.keras\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "my_student_network = student_network.load(\"models/model.keras\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -89,113 +60,153 @@
      "output_type": "stream",
      "text": [
       "Finished step 0, 100 out of 100 remain open.\n",
-      "Finished step 1, 13 out of 100 remain open.\n",
-      "Finished step 2, 13 out of 100 remain open.\n",
+      "Finished step 1, 47 out of 100 remain open.\n",
+      "Finished step 2, 47 out of 100 remain open.\n",
+      "Finished step 3, 26 out of 100 remain open.\n",
+      "Finished step 4, 26 out of 100 remain open.\n",
+      "Finished step 5, 26 out of 100 remain open.\n",
+      "Finished step 6, 26 out of 100 remain open.\n",
+      "Finished step 7, 26 out of 100 remain open.\n",
+      "Epoch 1/3\n",
+      "21/21 [==============================] - 0s 3ms/step - loss: 0.8213 - eval_output_loss: 0.0789 - policy_output_loss: 0.0677\n",
+      "Epoch 2/3\n",
+      "21/21 [==============================] - 0s 3ms/step - loss: 0.5968 - eval_output_loss: 0.0167 - policy_output_loss: 0.0387\n",
+      "Epoch 3/3\n",
+      "21/21 [==============================] - 0s 3ms/step - loss: 0.5594 - eval_output_loss: 0.0127 - policy_output_loss: 0.0238\n",
+      "Finished step 0, 100 out of 100 remain open.\n",
+      "Finished step 1, 12 out of 100 remain open.\n",
+      "Finished step 2, 12 out of 100 remain open.\n",
       "Finished step 3, 0 out of 100 remain open.\n",
+      "Finished step 4, 0 out of 100 remain open.\n",
+      "Finished step 5, 0 out of 100 remain open.\n",
+      "Finished step 6, 0 out of 100 remain open.\n",
+      "Finished step 7, 0 out of 100 remain open.\n",
       "Epoch 1/3\n",
-      "8/8 [==============================] - 0s 4ms/step - loss: 1.5442 - eval_output_loss: 0.4665 - policy_output_loss: 0.0491\n",
+      "8/8 [==============================] - 0s 4ms/step - loss: 1.4723 - eval_output_loss: 0.3160 - policy_output_loss: 0.0343\n",
       "Epoch 2/3\n",
-      "8/8 [==============================] - 0s 4ms/step - loss: 1.2373 - eval_output_loss: 0.3679 - policy_output_loss: 0.0378\n",
+      "8/8 [==============================] - 0s 4ms/step - loss: 1.3862 - eval_output_loss: 0.2914 - policy_output_loss: 0.0251\n",
       "Epoch 3/3\n",
-      "8/8 [==============================] - 0s 3ms/step - loss: 0.8916 - eval_output_loss: 0.2511 - policy_output_loss: 0.0423\n",
+      "8/8 [==============================] - 0s 4ms/step - loss: 1.3580 - eval_output_loss: 0.2839 - policy_output_loss: 0.0222\n",
       "Finished step 0, 100 out of 100 remain open.\n",
-      "Finished step 1, 21 out of 100 remain open.\n",
-      "Finished step 2, 21 out of 100 remain open.\n",
-      "Finished step 3, 21 out of 100 remain open.\n",
+      "Finished step 1, 52 out of 100 remain open.\n",
+      "Finished step 2, 52 out of 100 remain open.\n",
+      "Finished step 3, 34 out of 100 remain open.\n",
+      "Finished step 4, 34 out of 100 remain open.\n",
+      "Finished step 5, 34 out of 100 remain open.\n",
+      "Finished step 6, 34 out of 100 remain open.\n",
+      "Finished step 7, 34 out of 100 remain open.\n",
       "Epoch 1/3\n",
-      "11/11 [==============================] - 0s 3ms/step - loss: 1.2398 - eval_output_loss: 0.3634 - policy_output_loss: 0.0530\n",
+      "24/24 [==============================] - 0s 3ms/step - loss: 1.3259 - eval_output_loss: 0.2712 - policy_output_loss: 0.0332\n",
       "Epoch 2/3\n",
-      "11/11 [==============================] - 0s 3ms/step - loss: 0.6110 - eval_output_loss: 0.1500 - policy_output_loss: 0.0624\n",
+      "24/24 [==============================] - 0s 3ms/step - loss: 0.6095 - eval_output_loss: 0.0374 - policy_output_loss: 0.0248\n",
       "Epoch 3/3\n",
-      "11/11 [==============================] - 0s 3ms/step - loss: 0.4206 - eval_output_loss: 0.0946 - policy_output_loss: 0.0361\n",
+      "24/24 [==============================] - 0s 3ms/step - loss: 0.5007 - eval_output_loss: 0.0068 - policy_output_loss: 0.0158\n",
       "Finished step 0, 100 out of 100 remain open.\n",
-      "Finished step 1, 17 out of 100 remain open.\n",
-      "Finished step 2, 17 out of 100 remain open.\n",
+      "Finished step 1, 33 out of 100 remain open.\n",
+      "Finished step 2, 33 out of 100 remain open.\n",
+      "Finished step 3, 25 out of 100 remain open.\n",
+      "Finished step 4, 25 out of 100 remain open.\n",
+      "Finished step 5, 25 out of 100 remain open.\n",
+      "Finished step 6, 25 out of 100 remain open.\n",
+      "Finished step 7, 25 out of 100 remain open.\n",
+      "Epoch 1/3\n",
+      "19/19 [==============================] - 0s 3ms/step - loss: 0.8141 - eval_output_loss: 0.1054 - policy_output_loss: 0.0419\n",
+      "Epoch 2/3\n",
+      "19/19 [==============================] - 0s 3ms/step - loss: 0.5983 - eval_output_loss: 0.0409 - policy_output_loss: 0.0233\n",
+      "Epoch 3/3\n",
+      "19/19 [==============================] - 0s 4ms/step - loss: 0.4996 - eval_output_loss: 0.0114 - policy_output_loss: 0.0159\n",
+      "Finished step 0, 100 out of 100 remain open.\n",
+      "Finished step 1, 34 out of 100 remain open.\n",
+      "Finished step 2, 34 out of 100 remain open.\n",
+      "Finished step 3, 16 out of 100 remain open.\n",
+      "Finished step 4, 16 out of 100 remain open.\n",
+      "Finished step 5, 16 out of 100 remain open.\n",
+      "Finished step 6, 16 out of 100 remain open.\n",
+      "Finished step 7, 16 out of 100 remain open.\n",
+      "Epoch 1/3\n",
+      "16/16 [==============================] - 0s 3ms/step - loss: 1.0166 - eval_output_loss: 0.1748 - policy_output_loss: 0.0466\n",
+      "Epoch 2/3\n",
+      "16/16 [==============================] - 0s 3ms/step - loss: 0.8066 - eval_output_loss: 0.1115 - policy_output_loss: 0.0284\n",
+      "Epoch 3/3\n",
+      "16/16 [==============================] - 0s 3ms/step - loss: 0.6666 - eval_output_loss: 0.0690 - policy_output_loss: 0.0200\n",
+      "Finished step 0, 100 out of 100 remain open.\n",
+      "Finished step 1, 45 out of 100 remain open.\n",
+      "Finished step 2, 45 out of 100 remain open.\n",
+      "Finished step 3, 26 out of 100 remain open.\n",
+      "Finished step 4, 26 out of 100 remain open.\n",
+      "Finished step 5, 26 out of 100 remain open.\n",
+      "Finished step 6, 26 out of 100 remain open.\n",
+      "Finished step 7, 26 out of 100 remain open.\n",
+      "Epoch 1/3\n",
+      "20/20 [==============================] - 0s 4ms/step - loss: 0.7773 - eval_output_loss: 0.1033 - policy_output_loss: 0.0333\n",
+      "Epoch 2/3\n",
+      "20/20 [==============================] - 0s 3ms/step - loss: 0.5449 - eval_output_loss: 0.0328 - policy_output_loss: 0.0179\n",
+      "Epoch 3/3\n",
+      "20/20 [==============================] - 0s 3ms/step - loss: 0.5155 - eval_output_loss: 0.0272 - policy_output_loss: 0.0121\n",
+      "Finished step 0, 100 out of 100 remain open.\n",
+      "Finished step 1, 26 out of 100 remain open.\n",
+      "Finished step 2, 26 out of 100 remain open.\n",
       "Finished step 3, 10 out of 100 remain open.\n",
+      "Finished step 4, 10 out of 100 remain open.\n",
+      "Finished step 5, 10 out of 100 remain open.\n",
+      "Finished step 6, 10 out of 100 remain open.\n",
+      "Finished step 7, 10 out of 100 remain open.\n",
       "Epoch 1/3\n",
-      "9/9 [==============================] - 0s 4ms/step - loss: 0.7954 - eval_output_loss: 0.2145 - policy_output_loss: 0.0501\n",
+      "13/13 [==============================] - 0s 3ms/step - loss: 0.8927 - eval_output_loss: 0.1443 - policy_output_loss: 0.0434\n",
       "Epoch 2/3\n",
-      "9/9 [==============================] - 0s 4ms/step - loss: 0.6197 - eval_output_loss: 0.1620 - policy_output_loss: 0.0317\n",
+      "13/13 [==============================] - 0s 3ms/step - loss: 0.7079 - eval_output_loss: 0.0922 - policy_output_loss: 0.0177\n",
       "Epoch 3/3\n",
-      "9/9 [==============================] - 0s 4ms/step - loss: 0.5888 - eval_output_loss: 0.1550 - policy_output_loss: 0.0224\n",
+      "13/13 [==============================] - 0s 3ms/step - loss: 0.5222 - eval_output_loss: 0.0322 - policy_output_loss: 0.0155\n",
       "Finished step 0, 100 out of 100 remain open.\n",
-      "Finished step 1, 3 out of 100 remain open.\n",
-      "Finished step 2, 3 out of 100 remain open.\n",
+      "Finished step 1, 45 out of 100 remain open.\n",
+      "Finished step 2, 45 out of 100 remain open.\n",
+      "Finished step 3, 31 out of 100 remain open.\n",
+      "Finished step 4, 31 out of 100 remain open.\n",
+      "Finished step 5, 31 out of 100 remain open.\n",
+      "Finished step 6, 31 out of 100 remain open.\n",
+      "Finished step 7, 31 out of 100 remain open.\n",
+      "Epoch 1/3\n",
+      "22/22 [==============================] - 0s 3ms/step - loss: 0.6957 - eval_output_loss: 0.0845 - policy_output_loss: 0.0371\n",
+      "Epoch 2/3\n",
+      "22/22 [==============================] - 0s 3ms/step - loss: 0.5102 - eval_output_loss: 0.0310 - policy_output_loss: 0.0179\n",
+      "Epoch 3/3\n",
+      "22/22 [==============================] - 0s 3ms/step - loss: 0.4487 - eval_output_loss: 0.0149 - policy_output_loss: 0.0124\n",
+      "Finished step 0, 100 out of 100 remain open.\n",
+      "Finished step 1, 14 out of 100 remain open.\n",
+      "Finished step 2, 14 out of 100 remain open.\n",
       "Finished step 3, 0 out of 100 remain open.\n",
+      "Finished step 4, 0 out of 100 remain open.\n",
+      "Finished step 5, 0 out of 100 remain open.\n",
+      "Finished step 6, 0 out of 100 remain open.\n",
+      "Finished step 7, 0 out of 100 remain open.\n",
       "Epoch 1/3\n",
-      "7/7 [==============================] - 0s 3ms/step - loss: 1.1009 - eval_output_loss: 0.3243 - policy_output_loss: 0.0270\n",
+      "8/8 [==============================] - 0s 3ms/step - loss: 1.2526 - eval_output_loss: 0.2735 - policy_output_loss: 0.0458\n",
       "Epoch 2/3\n",
-      "7/7 [==============================] - 0s 3ms/step - loss: 0.9938 - eval_output_loss: 0.2889 - policy_output_loss: 0.0267\n",
+      "8/8 [==============================] - 0s 4ms/step - loss: 1.0896 - eval_output_loss: 0.2270 - policy_output_loss: 0.0239\n",
       "Epoch 3/3\n",
-      "7/7 [==============================] - 0s 4ms/step - loss: 0.8245 - eval_output_loss: 0.2310 - policy_output_loss: 0.0315\n",
+      "8/8 [==============================] - 0s 3ms/step - loss: 1.0692 - eval_output_loss: 0.2224 - policy_output_loss: 0.0179\n",
       "Finished step 0, 100 out of 100 remain open.\n",
-      "Finished step 1, 27 out of 100 remain open.\n",
-      "Finished step 2, 27 out of 100 remain open.\n",
-      "Finished step 3, 18 out of 100 remain open.\n",
-      "Epoch 1/3\n",
-      "11/11 [==============================] - 0s 3ms/step - loss: 0.9068 - eval_output_loss: 0.2597 - policy_output_loss: 0.0278\n",
-      "Epoch 2/3\n",
-      "11/11 [==============================] - 0s 3ms/step - loss: 0.5022 - eval_output_loss: 0.1230 - policy_output_loss: 0.0332\n",
-      "Epoch 3/3\n",
-      "11/11 [==============================] - 0s 3ms/step - loss: 0.2157 - eval_output_loss: 0.0275 - policy_output_loss: 0.0334\n",
-      "Finished step 0, 100 out of 100 remain open.\n",
-      "Finished step 1, 17 out of 100 remain open.\n",
-      "Finished step 2, 17 out of 100 remain open.\n",
+      "Finished step 1, 15 out of 100 remain open.\n",
+      "Finished step 2, 15 out of 100 remain open.\n",
       "Finished step 3, 0 out of 100 remain open.\n",
+      "Finished step 4, 0 out of 100 remain open.\n",
+      "Finished step 5, 0 out of 100 remain open.\n",
+      "Finished step 6, 0 out of 100 remain open.\n",
+      "Finished step 7, 0 out of 100 remain open.\n",
       "Epoch 1/3\n",
-      "9/9 [==============================] - 0s 4ms/step - loss: 0.6400 - eval_output_loss: 0.1662 - policy_output_loss: 0.0419\n",
+      "9/9 [==============================] - 0s 3ms/step - loss: 0.9930 - eval_output_loss: 0.1959 - policy_output_loss: 0.0226\n",
       "Epoch 2/3\n",
-      "9/9 [==============================] - 0s 4ms/step - loss: 0.4121 - eval_output_loss: 0.0923 - policy_output_loss: 0.0359\n",
+      "9/9 [==============================] - 0s 4ms/step - loss: 0.9550 - eval_output_loss: 0.1861 - policy_output_loss: 0.0159\n",
       "Epoch 3/3\n",
-      "9/9 [==============================] - 0s 3ms/step - loss: 0.2280 - eval_output_loss: 0.0321 - policy_output_loss: 0.0325\n",
-      "Finished step 0, 100 out of 100 remain open.\n",
-      "Finished step 1, 24 out of 100 remain open.\n",
-      "Finished step 2, 24 out of 100 remain open.\n",
-      "Finished step 3, 5 out of 100 remain open.\n",
-      "Epoch 1/3\n",
-      "10/10 [==============================] - 0s 3ms/step - loss: 0.4460 - eval_output_loss: 0.1035 - policy_output_loss: 0.0366\n",
-      "Epoch 2/3\n",
-      "10/10 [==============================] - 0s 3ms/step - loss: 0.2492 - eval_output_loss: 0.0416 - policy_output_loss: 0.0258\n",
-      "Epoch 3/3\n",
-      "10/10 [==============================] - 0s 3ms/step - loss: 0.2151 - eval_output_loss: 0.0315 - policy_output_loss: 0.0226\n",
-      "Finished step 0, 100 out of 100 remain open.\n",
-      "Finished step 1, 10 out of 100 remain open.\n",
-      "Finished step 2, 10 out of 100 remain open.\n",
-      "Finished step 3, 0 out of 100 remain open.\n",
-      "Epoch 1/3\n",
-      "8/8 [==============================] - 0s 4ms/step - loss: 0.3070 - eval_output_loss: 0.0645 - policy_output_loss: 0.0160\n",
-      "Epoch 2/3\n",
-      "8/8 [==============================] - 0s 4ms/step - loss: 0.1954 - eval_output_loss: 0.0273 - policy_output_loss: 0.0166\n",
-      "Epoch 3/3\n",
-      "8/8 [==============================] - 0s 3ms/step - loss: 0.1437 - eval_output_loss: 0.0117 - policy_output_loss: 0.0120\n",
-      "Finished step 0, 100 out of 100 remain open.\n",
-      "Finished step 1, 18 out of 100 remain open.\n",
-      "Finished step 2, 18 out of 100 remain open.\n",
-      "Finished step 3, 0 out of 100 remain open.\n",
-      "Epoch 1/3\n",
-      "9/9 [==============================] - 0s 3ms/step - loss: 0.1401 - eval_output_loss: 0.0102 - policy_output_loss: 0.0136\n",
-      "Epoch 2/3\n",
-      "9/9 [==============================] - 0s 3ms/step - loss: 0.1224 - eval_output_loss: 0.0062 - policy_output_loss: 0.0086\n",
-      "Epoch 3/3\n",
-      "9/9 [==============================] - 0s 3ms/step - loss: 0.1285 - eval_output_loss: 0.0088 - policy_output_loss: 0.0077\n",
-      "Finished step 0, 100 out of 100 remain open.\n",
-      "Finished step 1, 21 out of 100 remain open.\n",
-      "Finished step 2, 21 out of 100 remain open.\n",
-      "Finished step 3, 11 out of 100 remain open.\n",
-      "Epoch 1/3\n",
-      "10/10 [==============================] - 0s 3ms/step - loss: 0.6677 - eval_output_loss: 0.1846 - policy_output_loss: 0.0207\n",
-      "Epoch 2/3\n",
-      "10/10 [==============================] - 0s 3ms/step - loss: 0.3768 - eval_output_loss: 0.0878 - policy_output_loss: 0.0209\n",
-      "Epoch 3/3\n",
-      "10/10 [==============================] - 0s 3ms/step - loss: 0.2410 - eval_output_loss: 0.0426 - policy_output_loss: 0.0210\n"
+      "9/9 [==============================] - 0s 3ms/step - loss: 0.6441 - eval_output_loss: 0.0840 - policy_output_loss: 0.0131\n"
      ]
     }
    ],
    "source": [
     "for i in range(10):\n",
     "    c.run_training_batch(n_problems=100,epochs_per_episode=3)\n",
-    "    if i % 10 == 0:\n",
-    "        my_student_network.save(\"models/model.keras\")"
+    "    #if i % 10 == 0:\n",
+    "    #    my_student_network.save(\"models/t.keras\")"
    ]
   }
  ],
